RESOLVED FIXED286779
[css-scoping] @scope start and end doesn't accept pseudo-elements
https://bugs.webkit.org/show_bug.cgi?id=286779
Summary [css-scoping] @scope start and end doesn't accept pseudo-elements
Matthieu Dubet
Reported 2025-01-30 14:58:01 PST
https://wpt.fyi/results/css/css-cascade/at-scope-parsing.html?label=experimental&label=master&aligned Pseudo-elements cannot be scoping roots or scoping limits; they are invalid both within <scope-start> and <scope-end>. https://drafts.csswg.org/css-cascade-6/#scope-syntax
Attachments
Matthieu Dubet
Comment 1 2025-01-30 15:01:16 PST
Matthieu Dubet
Comment 2 2025-01-30 15:01:46 PST
EWS
Comment 3 2025-01-31 06:14:29 PST
Committed 289605@main (07adddca3660): <https://commits.webkit.org/289605@main> Reviewed commits have been landed. Closing PR #39787 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.