[CSS] @scope prelude doesn't accept pseudo-elements https://bugs.webkit.org/show_bug.cgi?id=286779

Reviewed by Brent Fulgham.

https://drafts.csswg.org/css-cascade-6/#scope-syntax

"Pseudo-elements cannot be scoping roots or scoping limits;
they are invalid both within <scope-start> and <scope-end>.""

* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/at-scope-parsing-expected.txt:
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeScopeRule):
(WebCore::CSSParserImpl::consumeStyleRule):
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::parseMutableCSSSelectorList):
(WebCore::parseCSSSelectorList):
(WebCore::CSSSelectorParser::CSSSelectorParser):
* Source/WebCore/css/parser/CSSSelectorParser.h:
(WebCore::CSSSelectorParser::CSSSelectorParser):

Canonical link: https://commits.webkit.org/289605@main